# SDA-Publications

./: .gitignore  README.md  main.tex  sda.bib  sda_old.bib
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml
dblp-fetcher/: pyproject.toml
dblp-fetcher/data/: sda.bib
dblp-fetcher/dblp_fetcher/: fetch_sda_associates.py  find_new_entries.py  get_publication_fetching_data.py  main.py  publication_diff.py
dblp-fetcher/dblp_fetcher/api_wrappers/: __init__.py  _google_sheets.py
dblp-fetcher/dblp_fetcher/model/: __init__.py  _person.py
dblp-fetcher/dblp_fetcher/persons/: __init__.py  _fetch_sda_associates.py
dblp-fetcher/dblp_fetcher/persons/model/: __init__.py  _person.py
dblp-fetcher/dblp_fetcher/publications/: __init__.py  _blacklist.py  _fetch_publications.py  _publications.py
dblp-fetcher/dblp_fetcher/publications/model/: __init__.py  _blacklist.py  _publications.py
dblp-fetcher/dblp_fetcher/util/: __init__.py  _conversion.py  _google_sheets.py  _validation.py
dblp-fetcher/tests/: test_dblp_fetcher.py
dblp-fetcher/tests/model/: test_person.py
dblp-fetcher/tests/persons/: test_person.py
dblp-fetcher/tests/publications/: test_bibliography.py  test_fetch_publications.py  test_publication.py  test_title_blacklist.py
dblp-fetcher/tests/util/: test_conversion.py  test_validation.py
examples/: dblpSpreadsheet.xlsx
src/: blacklist.txt  find_new_entries.py  get_publication_fetching_data.py  publication_diff.py  requirements.txt
