[tool.poetry]
name = "dblp-fetcher"
version = "0.1.0"
description = ""
authors = ["Lars Reimann <mail@larsreimann.com>"]

[tool.poetry.scripts]
dblp-fetcher = "dblp_fetcher.main:main"

[tool.poetry.dependencies]
python = "^3.10"
bibtexparser = "^1.4.0"
google-api-python-client = "^2.65.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.0"
requests = "^2.28.1"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
