[tool.poetry]
name = "dblp-fetcher"
version = "0.1.0"
description = ""
authors = ["Lars Reimann <mail@larsreimann.com>"]

[tool.poetry.scripts]
dblp-fetcher = "dblp_fetcher.main:main"

[tool.poetry.dependencies]
python = "^3.10"
bibtexparser = "^1.4.0"
google-api-python-client = "^2.97.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.0.0"
requests = "^2.31.0"
validators = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
